# Virtual-Assembler-Interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Headers/: BinaryUtils.h  Console.h  FileLoader.h  Instruction.h  LanguageConstants.h  Memory.h  NorthBridge.h  StructuredFile.h  VirtualMachine.h
Headers/Config/: CPUConstants.h  LanguageConstants.h  VMConstants.h
Headers/Cpu/: CPU.h  CPUConstants.h  CpuState.h  Flags.h  Instruction.h
Headers/Cpu/Functors/: AndFunctor.h  AssignFunctor.h  BinaryRegisterwiseFunctor.h  BreakFunctor.h  CallAddressFunctor.h  DecFunctor.h  DivFunctor.h  ExitFunctor.h  IncFunctor.h  InstructionFunctor.h  JumpFunctor.h  LoadFunctor.h  MovFunctor.h  MulFunctor.h  NandFunctor.h  NopFunctor.h  NorFunctor.h  NotFunctor.h  OrFunctor.h  PopFunctor.h  PopSfFunctor.h  PushFunctor.h  PushSfFunctor.h  RetFunctor.h  StoreFunctor.h  SubFunctor.h  SumFunctor.h  SwapFunctor.h  XorFunctor.h
Headers/Exceptions/: CliException.h  Exception.h  ExecutionException.h  IOException.h
Headers/ObjectFile/: Header.h  ObjectFile.h  SymbolTable.h
Headers/VM/: Debugger.h  FileLoader.h  Memory.h  VirtualMachine.h
Headers/VM/Logging/: ConsoleLogger.h  Logger.h  Logging.h  LoggingSeverity.h
Headers/VdbCli/: Commands.h  Definitions.h  Parser.h  Tokenizer.h  Utils.h  VdbCli.h  VdbCliCore.h
Headers/VdbCli/Commands/: Command.h  CommandWrapper.h  ContinueCommand.h  PrintRegisterCommand.h  RemoveBreakpointCommand.h  SetBreakpointCommand.h  ShowStackTraceCommand.h  StepInCommand.h  StepOverCommand.h
Sources/: BinaryUtils.cpp  Console.cpp  FileLoader.cpp  Instruction.cpp  Memory.cpp  NorthBridge.cpp  StructuredFile.cpp  VirtualMachine.cpp
Sources/Cpu/: CPU.cpp  CpuState.cpp  Flags.cpp  Instruction.cpp
Sources/Cpu/Functors/: AndFunctor.cpp  AssignFunctor.cpp  BinaryRegisterwiseFunctor.cpp  BreakFunctor.cpp  CallAddressFunctor.cpp  DecFunctor.cpp  DivFunctor.cpp  ExitFunctor.cpp  IncFunctor.cpp  InstructionFunctor.cpp  JumpFunctor.cpp  LoadFunctor.cpp  MovFunctor.cpp  MulFunctor.cpp  NandFunctor.cpp  NopFunctor.cpp  NorFunctor.cpp  NotFunctor.cpp  OrFunctor.cpp  PopFunctor.cpp  PopSfFunctor.cpp  PushFunctor.cpp  PushSfFunctor.cpp  RetFunctor.cpp  StoreFunctor.cpp  SubFunctor.cpp  SumFunctor.cpp  SwapFunctor.cpp  XorFunctor.cpp
Sources/Exceptions/: CliException.cpp  Exception.cpp  ExecutionException.cpp  IOException.cpp
Sources/ObjectFile/: Header.cpp  ObjectFile.cpp  SymbolTable.cpp
Sources/VM/: Debugger.cpp  FileLoader.cpp  Memory.cpp  VirtualMachine.cpp
Sources/VM/Logging/: ConsoleLogger.cpp  Logging.cpp
Sources/VdbCli/: Parser.cpp  Tokenizer.cpp  Utils.cpp  VdbCli.cpp  VdbCliCore.cpp
Sources/VdbCli/Commands/: CommandWrapper.cpp  ContinueCommand.cpp  PrintRegisterCommand.cpp  RemoveBreakpointCommand.cpp  SetBreakpointCommand.cpp  ShowStackTraceCommand.cpp  StepInCommand.cpp  StepOverCommand.cpp
